--- a/.github/workflows/update-wakatime.yml
+++ b/.github/workflows/update-wakatime.yml
@@ -1,5 +1,5 @@
 #
-# WakaTimeStats.tsx
+# WakaTimeStats
 # WakaTime stats component for github.io site
 #
 # @package    WakaTimeStats
@@ -25,23 +25,3 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 #
-
-name: Update WakaTime JSON
-on:
-  schedule:
-    - cron: '0 0 * * *' # runs daily at midnight UTC
-  workflow_dispatch:
-
-jobs:
-  update:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: |
-          curl -L https://wakatime.com/share/@brunus/fd571de1-3899-4067-b50c-999993fe031c.json -o public/wakatime.json
-      - run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add public/wakatime.json
-          git commit -m "Update WakaTime JSON"
-          git push
