--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "global.d.ts"],
+  "exclude": ["gitprofile.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
